# sky-clash

./: README.md  author
.github/workflows/: rust.yml
Undervisning/: Blinkende LED eksempel  Blinkende_lys_med_knap  LÆS LYSSENSOR  Læsning fra en Knapsensor
board/: .clang-tidy  .clangd  .gitignore  Makefile  board.ino  debug.h  env.example  led.h  led.ino  rfid_scanner.h  rfid_scanner.ino  sketch.yaml  wifi.h  wifi.ino
docs/: Kravspecifikationer.md  api-spec.md  er_diagram.drawio
docs/Brugerguide/: README.md
docs/ER Diagrammer/: skyclash.drawio
docs/Flowcharts/: herocreator_flowchart.drawio  skyclash_flowcharts.drawio
docs/flowcharts/: herocreator_flowchart.drawio
game/: .gitignore  Cargo.toml  build.rs  hero_creator.rs  mock_db.both.json  mock_db.one.json  prepare-msvc-release
game/component-macro/: Cargo.toml
game/engine/: Cargo.toml
game/engine/component-macro/src/: lib.rs
game/engine/src/: collision.rs  component.rs  context.rs  entity.rs  font.rs  game.rs  id.rs  lib.rs  physics.rs  query_runner.rs  rigid_body.rs  shared_ptr.rs  system.rs  text.rs  texture.rs  v2.rs
game/engine/src/ui/: builder.rs  canvas.rs  components.rs  focus.rs  id_offset.rs  layout.rs  mod.rs  ui_context.rs  units.rs  utils.rs  widget.rs
game/engine/src/ui/components/: button.rs  layout.rs  mod.rs  shape.rs
game/src/: actor.rs  attacks.rs  backend_connection.rs  collision.rs  comms.rs  cuwusions.rs  game.rs  hero_creator.rs  hero_info.rs  hud.rs  hurtbox.rs  key_set.rs  keyset.rs  knockoff.rs  main.rs  main_menu.rs  menu.rs  message.rs  mock_connection.rs  mothership.rs  my_menu.rs  operator_test.rs  pause.rs  player.rs  player_attack.rs  player_interaction.rs  player_movement.rs  server.rs  shared_ptr.rs  sound_player.rs  sprite_renderer.rs  start_game.rs  timer.rs  ui.rs  ui2.rs  ui_components.rs
game/src/engine/: collision.rs  component.rs  context.rs  error.rs  game.rs  gravity.rs  mod.rs  rigid_body.rs  sprite.rs  system.rs  text.rs
game/src/engine/ui/: canvas.rs  mod.rs  units.rs  widget.rs
game/src/engine/ui/components/: button.rs  layout.rs  mod.rs  shape.rs
game/src/ui/: builder.rs  components.rs  focus.rs  handle.rs  layout.rs  mod.rs  ui_context.rs  utils.rs
game/src/ui2/: builder.rs  components.rs  mod.rs
server/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  prepare.sql
server/migrations/: 20240415112505_add_hero_table.sql  20240415120515_add_finished_matches_table.sql
server/src/: Database.rs  board.rs  database.rs  main.rs  routes.rs  sqlite3_db.rs
shared/: Cargo.toml
shared/src/: lib.rs
