[package]
name = "pvp-game-dilapidation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
engine = { version = "0.1.0", path = "./engine" }
mpsc = "0.2.3"
reqwest = { version = "0.12.4", features = ["blocking"] }
tokio = "1.37.0"
