[package]
name = "pvp-game-dilapidation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
engine = { version = "0.1.0", path = "./engine" }
shared = { version = "0.1.0", path = "../shared" }
mpsc = "0.2.3"
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"
serde_repr = "0.1.19"
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread"] }
