[package]
name = "sky-clash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
engine = { version = "*", path = "./engine" }
shared = { version = "*", path = "../shared" }
mpsc = "0.2.3"
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"
serde_repr = "0.1.19"
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread"] }
rand = "0.8.5"

[dev-dependencies]
pretty_assertions = "1.4.0"

