[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }

[[bin]]
name = "server"
path = "src/main.rs"
