[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { version = "0.1.0", path = "../shared" }
actix-web = "4"
dotenv = "0.15.0"
env_logger = "0.11.3"
eyre = "0.6.12"
serde = { version = "1.0.197", features = ["derive"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.37.0", features = ["sync"] }

[[bin]]
name = "server"
path = "src/main.rs"
