[package]
name = "engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = { version = "0.36.0", features = ["ttf", "image", "mixer"] }
component-macro = { version = "0.1.0", path = "./component-macro" }
rand = "0.8.5"

[features]
static-link = ["sdl2/bundled", "sdl2/static-link"]
